[gd_scene load_steps=7 format=3 uid="uid://djc8kv8c3eoxm"]

[ext_resource type="Script" path="res://scenes/screens/mapping_detail_screen.gd" id="1_1dcji"]
[ext_resource type="Theme" uid="uid://duj3xsv2vc43h" path="res://assets/themes/theme.tres" id="1_m4eqi"]
[ext_resource type="PackedScene" uid="uid://db8ec5njykh04" path="res://scenes/components/mapping_request_detail.tscn" id="3_q38a3"]
[ext_resource type="PackedScene" uid="uid://dbpt0062l50ce" path="res://scenes/components/mapping_response_detail.tscn" id="4_hq8y5"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_bte7y"]
color = Color(1, 1, 1, 0.313726)
thickness = 2

[sub_resource type="LabelSettings" id="LabelSettings_4xhrg"]
font_size = 24

[node name="MappingDetailScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1dcji")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_m4eqi")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("1_m4eqi")

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_m4eqi")

[node name="ReturnButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Return"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxLine_bte7y")

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "Mapping"
label_settings = SubResource("LabelSettings_4xhrg")

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxLine_bte7y")

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "Save"

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 544

[node name="MappingRequestDetail" parent="MarginContainer/VBoxContainer/HSplitContainer" instance=ExtResource("3_q38a3")]
unique_name_in_owner = true
layout_mode = 2

[node name="MappingResponseDetail" parent="MarginContainer/VBoxContainer/HSplitContainer" instance=ExtResource("4_hq8y5")]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer3/ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer3/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="mapping_name_updated" from="MarginContainer/VBoxContainer/HSplitContainer/MappingRequestDetail" to="." method="_on_mapping_request_detail_mapping_name_updated"]
